# ChangeLog for app-admin/aeinfo
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Aug 2012; Justin Lecher <jlec@gentoo.org> aeinfo-2.4.ebuild,
  +files/aeinfo-2.4-gcc-4.7.patch, +files/aeinfo-2.4-makefile.patch:
  Enhance DESCRIPTION, move to virtual/libusb; add fix for gcc-4.7; respect all
  FLAGS

  02 Jun 2012; Justin Lecher <jlec@gentoo.org> Manifest:
  Recreate full Manifest

  02 Jun 2012; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Thin manifest

*<PACKAGE_NAME>-<PACKAGE_VERSION>-<PACKAGE_RELEASE> (DD MMM YYYY)

  DD MMM YYYY; YOUR_NAME <YOUR_EMAIL> changed_file1, changed_file2 :
  Initial import.  Ebuild submitted by submitter_name <submitter_email>.
  Note that the "changed_file" listing is optional if you are simply bumping
  the rev of the ebuild and are only making changes to the .ebuild file
  itself.  Also note that we now have a single unified paragraph rather than
  having the first line separated from the rest by a newline.  Everything
  should be in one block like this. (note by drobbins, 16 Jul 2002)

  DD MMM YYYY; YOUR_NAME <YOUR_EMAIL> changed_file1, changed_file2: this is
  an earlier ChangeLog entry.
 
-- Explanation of ChangeLog format:

  ***************************************************************************
  THIS IS IMPORTANT: The ChangeLog format is a *chronological* account of all
  changes made to a set of ebuilds. That means that the most recent ChangeLog
  entry *always* goes at the top of the file. More explanation below.
  ***************************************************************************

  ***************************************************************************
  ANOTHER IMPORTANT NOTE: There are some ChangeLogs that don't follow this
  format and organize all changes under the "correct" "*" entry. This is not
  correct. However, rather than making a concerted effort to fix these
  ChangeLogs, we should spend our energy defining a comprehensive and strict