@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/aeinfo
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Jul 2013; Justin Lecher <jlec@gentoo.org> aeinfo-2.4.ebuild, metadata.xml:
+  Bump to EAPI=5
 
   12 Aug 2012; Justin Lecher <jlec@gentoo.org> aeinfo-2.4.ebuild,
   +files/aeinfo-2.4-gcc-4.7.patch, +files/aeinfo-2.4-makefile.patch:
